fix images alignment

--- a/styles/pages/detail.less
+++ b/styles/pages/detail.less
@@ -19,7 +19,7 @@
       img {
         .center();
         min-width: 100%;
-        min-height: 100%;
+        height: 100%;
         object-fit: cover;
         transition: opacity .75s;
 
